overflow issues on mobile

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -353,8 +353,7 @@
   body,html {
     margin: 0;
     padding: 0;
-    overflow-y: hidden; 
-    overflow-x: hidden;
+    overflow: hidden;
   }
 
   * {
