--- a/src/styles/layout/header.scss
+++ b/src/styles/layout/header.scss
@@ -1,6 +1,6 @@
 header {
     height: 15vh;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
     justify-content: space-between;
