--- a/src/styles/pages/dashboard.scss
+++ b/src/styles/pages/dashboard.scss
@@ -5,4 +5,5 @@
     position: initial;
     overflow: hidden;
     margin: 0;
+    overflow: hidden;
 }
