--- a/src/styles/pages/login.scss
+++ b/src/styles/pages/login.scss
@@ -8,6 +8,7 @@
     border: 2px solid #313639;
     background: white;
     opacity: 0.8;
+    overflow: hidden;
 
     
     button:last-child {
